webadmin,userportal: No need for gwt-plugin.extraJvmArgs in gwt-extension
The "gwt-plugin.extraJvmArgs" property was recently moved to
frontend parent POM, i.e. frontend/webadmin/modules/pom.xml

Specific frontend modules don't need to override this property,
its value can be inherited from frontend parent POM.

In case of gwt-extension, this property isn't really necessary,
since there's no GWT compilation involved when building this
module.

Change-Id: If3bc42f84e78a487d7c1ad10b82d466ca197fb90
Signed-off-by: Vojtech Szocs <vszocs@redhat.com>